Linkedin Button vertical alignment fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -242,6 +242,10 @@ ul.nav.navbar-nav {
     padding-bottom: 10px;
 }
 
+.IN-widget {
+    vertical-align: top !important;
+  }
+
 .consulting-info-typography {
     font-size: 130%;
 }
